flow control exercise 4.2 to 4.6

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,4 +49,13 @@
     "[c]": {
         // "files.encoding": "gbk" // 这样的格式可以对指定后缀的文件应用设置，如果你实在想用gbk，就这样设置吧。cpp同理。
     },
+    "files.associations": {
+        "*.cjson": "jsonc",
+        "*.wxss": "css",
+        "*.wxs": "javascript",
+        "*.java": "java",
+        "stdlib.h": "c",
+        "cstdlib": "c",
+        "math.h": "c"
+    },
 }
