--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,7 @@
         "*.java": "java",
         "stdlib.h": "c",
         "cstdlib": "c",
-        "math.h": "c"
+        "math.h": "c",
+        "calc.h": "c"
     },
 }
